--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "mpdf/mpdf": "^6.1",
         "spatie/browsershot": "^4.3",
         "spatie/laravel-pdf": "^1.5",
+        "spatie/laravel-permission": "^6.9",
         "tecnickcom/tcpdf": "^6.7"
     },
     "require-dev": {
