--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
         "mpdf/mpdf": "^6.1",
+        "pion/laravel-chunk-upload": "^1.5",
         "spatie/browsershot": "^4.3",
         "spatie/laravel-pdf": "^1.5",
         "spatie/laravel-permission": "^6.9",
